2014-01-10  Anders Carlsson  <andersca@apple.com>

        Move progress tracking functions from FrameLoaderClient to a new ProgressTrackerClient
        https://bugs.webkit.org/show_bug.cgi?id=126801

        Reviewed by Sam Weinig.

        * GNUmakefile.list.am:
        * WebCore.vcxproj/WebCore.vcxproj:
        * WebCore.vcxproj/WebCore.vcxproj.filters:
        * WebCore.xcodeproj/project.pbxproj:
        * loader/EmptyClients.cpp:
        (WebCore::fillWithEmptyClients):
        * loader/EmptyClients.h:
        * loader/FrameLoaderClient.h:
        * loader/ProgressTracker.cpp:
        (WebCore::ProgressTracker::ProgressTracker):
        (WebCore::ProgressTracker::~ProgressTracker):
        (WebCore::ProgressTracker::progressStarted):
        (WebCore::ProgressTracker::progressCompleted):
        (WebCore::ProgressTracker::finalProgressComplete):
        (WebCore::ProgressTracker::incrementProgress):
        * loader/ProgressTracker.h:
        * loader/ProgressTrackerClient.h: Added.
        (WebCore::ProgressTrackerClient::~ProgressTrackerClient):
        (WebCore::ProgressTrackerClient::progressTrackerDestroyed):
        (WebCore::ProgressTrackerClient::willChangeEstimatedProgress):
        (WebCore::ProgressTrackerClient::didChangeEstimatedProgress):
        * page/Page.cpp:
        (WebCore::Page::Page):
        (WebCore::Page::PageClients::PageClients):
        * page/Page.h:

2014-01-10  Joseph Pecoraro  <pecoraro@apple.com>

        Fix RenderObject.o for iOS. Unreviewed build fix.

        r156285 renamed firstChild() to firstChildSlow(), so update
        occurances in IOS_TEXT_AUTOSIZING code. Also account for a
        RenderObject::style reference / pointer change.

        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::traverseNext):
        (WebCore::includeNonFixedHeight):

2014-01-10  Joseph Pecoraro  <pecoraro@apple.com>

        Fix MediaPlayerPrivateMediaSourceAVFObjC.o for iOS. Unreviewed build fix.
